clean up phase 4, bulk optimization and clean up