@@ -523,7 +523,7 @@ public class Minecraft implements IThreadListener, ISnooperInfo {
 	/**
 	 * Starts the game: initializes the canvas, the title, the settings, etcetera.
 	 */
-	private void init() throws LWJGLException, IOException {
+	private void init() throws LWJGLException {
 
 		gameSettings = new GameSettings(this, mcDataDir);
 		creativeSettings = new CreativeSettings(this, mcDataDir);
@@ -638,15 +638,9 @@ public class Minecraft implements IThreadListener, ISnooperInfo {
 	 */
 	private void populateSearchTreeManager() {
 
-		SearchTree<ItemStack> searchtree = new SearchTree<ItemStack>((p_193988_0_) ->
-		{
-			return (List) p_193988_0_.getTooltip(null, ITooltipFlag.TooltipFlags.NORMAL).stream().map(TextFormatting::getTextWithoutFormattingCodes).map(String::trim).filter((p_193984_0_) -> {
-				return !p_193984_0_.isEmpty();
-			}).collect(Collectors.toList());
-		}, (p_193985_0_) ->
-		{
-			return Collections.singleton(Item.REGISTRY.getNameForObject(p_193985_0_.getItem()));
-		});
+		SearchTree<ItemStack> searchtree = new SearchTree<>((p_193988_0_) ->
+				(List) p_193988_0_.getTooltip(null, ITooltipFlag.TooltipFlags.NORMAL).stream().map(TextFormatting::getTextWithoutFormattingCodes).map(String::trim).filter((p_193984_0_) -> !p_193984_0_.isEmpty()).collect(Collectors.toList()), (p_193985_0_) ->
+				Collections.singleton(Item.REGISTRY.getNameForObject(p_193985_0_.getItem())));
 		NonNullList<ItemStack> nonnulllist = NonNullList.create();
 
 		for (Item item : Item.REGISTRY) {
@@ -654,19 +648,9 @@ public class Minecraft implements IThreadListener, ISnooperInfo {
 		}
 
 		nonnulllist.forEach(searchtree::add);
-		SearchTree<RecipeList> searchtree1 = new SearchTree<RecipeList>((p_193990_0_) ->
-		{
-			return (List) p_193990_0_.getRecipes().stream().flatMap((p_193993_0_) -> {
-				return p_193993_0_.getRecipeOutput().getTooltip(null, ITooltipFlag.TooltipFlags.NORMAL).stream();
-			}).map(TextFormatting::getTextWithoutFormattingCodes).map(String::trim).filter((p_193994_0_) -> {
-				return !p_193994_0_.isEmpty();
-			}).collect(Collectors.toList());
-		}, (p_193991_0_) ->
-		{
-			return (List) p_193991_0_.getRecipes().stream().map((p_193992_0_) -> {
-				return Item.REGISTRY.getNameForObject(p_193992_0_.getRecipeOutput().getItem());
-			}).collect(Collectors.toList());
-		});
+		SearchTree<RecipeList> searchtree1 = new SearchTree<>((p_193990_0_) ->
+				(List) p_193990_0_.getRecipes().stream().flatMap((p_193993_0_) -> p_193993_0_.getRecipeOutput().getTooltip(null, ITooltipFlag.TooltipFlags.NORMAL).stream()).map(TextFormatting::getTextWithoutFormattingCodes).map(String::trim).filter((p_193994_0_) -> !p_193994_0_.isEmpty()).collect(Collectors.toList()), (p_193991_0_) ->
+				(List) p_193991_0_.getRecipes().stream().map((p_193992_0_) -> Item.REGISTRY.getNameForObject(p_193992_0_.getRecipeOutput().getItem())).collect(Collectors.toList()));
 		RecipeBookClient.ALL_RECIPES.forEach(searchtree1::add);
 		searchTreeManager.register(SearchTreeManager.ITEMS, searchtree);
 		searchTreeManager.register(SearchTreeManager.RECIPES, searchtree1);
@@ -907,7 +891,7 @@ public class Minecraft implements IThreadListener, ISnooperInfo {
 		displayHeight = displaymode.getHeight();
 	}
 
-	private void drawSplashScreen(TextureManager textureManagerInstance) throws LWJGLException {
+	private void drawSplashScreen(TextureManager textureManagerInstance) {
 
 		ScaledResolution scaledresolution = new ScaledResolution(this);
 		int i = scaledresolution.getScaleFactor();
@@ -1044,7 +1028,7 @@ public class Minecraft implements IThreadListener, ISnooperInfo {
 			String s = GLU.gluErrorString(i);
 			LOGGER.error("########## GL ERROR ##########");
 			LOGGER.error("@ {}", message);
-			LOGGER.error("{}: {}", Integer.valueOf(i), s);
+			LOGGER.error("{}: {}", i, s);
 		}
 	}
 
@@ -1258,7 +1242,7 @@ public class Minecraft implements IThreadListener, ISnooperInfo {
 		List<Profiler.Result> list = mcProfiler.getProfilingData(debugProfilerName);
 
 		if (!list.isEmpty()) {
-			Profiler.Result profiler$result = list.remove(0);
+			Profiler.Result profiler$result = list.removeFirst();
 
 			if (keyCount == 0) {
 				if (!profiler$result.profilerName.isEmpty()) {
@@ -1289,7 +1273,7 @@ public class Minecraft implements IThreadListener, ISnooperInfo {
 
 		if (mcProfiler.profilingEnabled) {
 			List<Profiler.Result> list = mcProfiler.getProfilingData(debugProfilerName);
-			Profiler.Result profiler$result = list.remove(0);
+			Profiler.Result profiler$result = list.removeFirst();
 			GlStateManager.clear(256);
 			GlStateManager.matrixMode(5889);
 			GlStateManager.enableColorMaterial();
@@ -1315,8 +1299,7 @@ public class Minecraft implements IThreadListener, ISnooperInfo {
 			GlStateManager.disableBlend();
 			double d0 = 0.0D;
 
-			for (int l = 0; l < list.size(); ++l) {
-				Profiler.Result profiler$result1 = list.get(l);
+			for (Profiler.Result profiler$result1 : list) {
 				int i1 = MathHelper.floor(profiler$result1.usePercentage / 4.0D) + 1;
 				bufferbuilder.begin(6, DefaultVertexFormats.POSITION_COLOR);
 				int j1 = profiler$result1.getColor();
@@ -1688,12 +1671,7 @@ public class Minecraft implements IThreadListener, ISnooperInfo {
 			} catch (Throwable throwable1) {
 				CrashReport crashreport = CrashReport.makeCrashReport(throwable1, "Updating screen events");
 				CrashReportCategory crashreportcategory = crashreport.makeCategory("Affected screen");
-				crashreportcategory.addDetail("Screen name", new ICrashReportDetail<String>() {
-					public String call() throws Exception {
-
-						return currentScreen.getClass().getCanonicalName();
-					}
-				});
+				crashreportcategory.addDetail("Screen name", () -> currentScreen.getClass().getCanonicalName());
 				throw new ReportedException(crashreport);
 			}
 
@@ -1703,12 +1681,7 @@ public class Minecraft implements IThreadListener, ISnooperInfo {
 				} catch (Throwable throwable) {
 					CrashReport crashreport1 = CrashReport.makeCrashReport(throwable, "Ticking screen");
 					CrashReportCategory crashreportcategory1 = crashreport1.makeCategory("Affected screen");
-					crashreportcategory1.addDetail("Screen name", new ICrashReportDetail<String>() {
-						public String call() throws Exception {
-
-							return currentScreen.getClass().getCanonicalName();
-						}
-					});
+					crashreportcategory1.addDetail("Screen name", () -> currentScreen.getClass().getCanonicalName());
 					throw new ReportedException(crashreport1);
 				}
 			}
@@ -2118,7 +2091,7 @@ public class Minecraft implements IThreadListener, ISnooperInfo {
 
 	private void debugFeedbackTranslated(String untranslatedTemplate, Object... objs) {
 
-		ingameGUI.getChatGUI().printChatMessage((new TextComponentString("")).appendSibling((new TextComponentTranslation("debug.prefix")).setStyle((new Style()).setColor(TextFormatting.YELLOW).setBold(Boolean.valueOf(true)))).appendText(" ").appendSibling(new TextComponentTranslation(untranslatedTemplate, objs)));
+		ingameGUI.getChatGUI().printChatMessage((new TextComponentString("")).appendSibling((new TextComponentTranslation("debug.prefix")).setStyle((new Style()).setColor(TextFormatting.YELLOW).setBold(Boolean.TRUE))).appendText(" ").appendSibling(new TextComponentTranslation(untranslatedTemplate, objs)));
 	}
 
 	/**
@@ -2353,62 +2326,61 @@ public class Minecraft implements IThreadListener, ISnooperInfo {
 					return;
 				}
 
-				if (objectMouseOver.entityHit instanceof EntityPainting) {
-					itemstack = new ItemStack(Items.PAINTING);
-				} else if (objectMouseOver.entityHit instanceof EntityLeashKnot) {
-					itemstack = new ItemStack(Items.LEAD);
-				} else if (objectMouseOver.entityHit instanceof EntityItemFrame entityitemframe) {
-					ItemStack itemstack1 = entityitemframe.getDisplayedItem();
+				switch (objectMouseOver.entityHit) {
+					case EntityPainting entityPainting -> itemstack = new ItemStack(Items.PAINTING);
+					case EntityLeashKnot entityLeashKnot -> itemstack = new ItemStack(Items.LEAD);
+					case EntityItemFrame entityitemframe -> {
+						ItemStack itemstack1 = entityitemframe.getDisplayedItem();
 
-					if (itemstack1.isEmpty()) {
-						itemstack = new ItemStack(Items.ITEM_FRAME);
-					} else {
-						itemstack = itemstack1.copy();
+						if (itemstack1.isEmpty()) {
+							itemstack = new ItemStack(Items.ITEM_FRAME);
+						} else {
+							itemstack = itemstack1.copy();
+						}
 					}
-				} else if (objectMouseOver.entityHit instanceof EntityMinecart entityminecart) {
-					Item item1;
+					case EntityMinecart entityminecart -> {
+						Item item1;
 
-					switch (entityminecart.getType()) {
-						case FURNACE:
-							item1 = Items.FURNACE_MINECART;
-							break;
+						switch (entityminecart.getType()) {
+							case FURNACE:
+								item1 = Items.FURNACE_MINECART;
+								break;
 
-						case CHEST:
-							item1 = Items.CHEST_MINECART;
-							break;
+							case CHEST:
+								item1 = Items.CHEST_MINECART;
+								break;
 
-						case TNT:
-							item1 = Items.TNT_MINECART;
-							break;
+							case TNT:
+								item1 = Items.TNT_MINECART;
+								break;
 
-						case HOPPER:
-							item1 = Items.HOPPER_MINECART;
-							break;
+							case HOPPER:
+								item1 = Items.HOPPER_MINECART;
+								break;
 
-						case COMMAND_BLOCK:
-							item1 = Items.COMMAND_BLOCK_MINECART;
-							break;
+							case COMMAND_BLOCK:
+								item1 = Items.COMMAND_BLOCK_MINECART;
+								break;
 
-						default:
-							item1 = Items.MINECART;
+							default:
+								item1 = Items.MINECART;
+						}
+
+						itemstack = new ItemStack(item1);
 					}
+					case EntityBoat entityBoat -> itemstack = new ItemStack(entityBoat.getItemBoat());
+					case EntityArmorStand entityArmorStand -> itemstack = new ItemStack(Items.ARMOR_STAND);
+					case EntityEnderCrystal entityEnderCrystal -> itemstack = new ItemStack(Items.END_CRYSTAL);
+					default -> {
+						ResourceLocation resourcelocation = EntityList.getKey(objectMouseOver.entityHit);
 
-					itemstack = new ItemStack(item1);
-				} else if (objectMouseOver.entityHit instanceof EntityBoat) {
-					itemstack = new ItemStack(((EntityBoat) objectMouseOver.entityHit).getItemBoat());
-				} else if (objectMouseOver.entityHit instanceof EntityArmorStand) {
-					itemstack = new ItemStack(Items.ARMOR_STAND);
-				} else if (objectMouseOver.entityHit instanceof EntityEnderCrystal) {
-					itemstack = new ItemStack(Items.END_CRYSTAL);
-				} else {
-					ResourceLocation resourcelocation = EntityList.getKey(objectMouseOver.entityHit);
+						if (resourcelocation == null || !EntityList.ENTITY_EGGS.containsKey(resourcelocation)) {
+							return;
+						}
 
-					if (resourcelocation == null || !EntityList.ENTITY_EGGS.containsKey(resourcelocation)) {
-						return;
+						itemstack = new ItemStack(Items.SPAWN_EGG);
+						ItemMonsterPlacer.applyEntityIdToItemStack(itemstack, resourcelocation);
 					}
-
-					itemstack = new ItemStack(Items.SPAWN_EGG);
-					ItemMonsterPlacer.applyEntityIdToItemStack(itemstack, resourcelocation);
 				}
 			}
 
@@ -2471,92 +2443,43 @@ public class Minecraft implements IThreadListener, ISnooperInfo {
 	 */
 	public CrashReport addGraphicsAndWorldToCrashReport(CrashReport theCrash) {
 
-		theCrash.getCategory().addDetail("Launched Version", new ICrashReportDetail<String>() {
-			public String call() throws Exception {
+		theCrash.getCategory().addDetail("Launched Version", () -> launchedVersion);
+		theCrash.getCategory().addDetail("LWJGL", () -> Sys.getVersion());
+		theCrash.getCategory().addDetail("OpenGL", () -> GlStateManager.glGetString(7937) + " GL version " + GlStateManager.glGetString(7938) + ", " + GlStateManager.glGetString(7936));
+		theCrash.getCategory().addDetail("GL Caps", () -> OpenGlHelper.getLogText());
+		theCrash.getCategory().addDetail("Using VBOs", () -> gameSettings.useVbo ? "Yes" : "No");
+		theCrash.getCategory().addDetail("Is Modded", () -> {
 
-				return launchedVersion;
+			String s = ClientBrandRetriever.getClientModName();
+
+			if (!"vanilla".equals(s)) {
+				return "Definitely; Client brand changed to '" + s + "'";
+			} else {
+				return Minecraft.class.getSigners() == null ? "Very likely; Jar signature invalidated" : "Probably not. Jar signature remains and client brand is untouched.";
 			}
 		});
-		theCrash.getCategory().addDetail("LWJGL", new ICrashReportDetail<String>() {
-			public String call() throws Exception {
+		theCrash.getCategory().addDetail("Type", () -> "Client (map_client.txt)");
+		theCrash.getCategory().addDetail("Resource Packs", () -> {
 
-				return Sys.getVersion();
-			}
-		});
-		theCrash.getCategory().addDetail("OpenGL", new ICrashReportDetail<String>() {
-			public String call() {
+			StringBuilder stringbuilder = new StringBuilder();
 
-				return GlStateManager.glGetString(7937) + " GL version " + GlStateManager.glGetString(7938) + ", " + GlStateManager.glGetString(7936);
-			}
-		});
-		theCrash.getCategory().addDetail("GL Caps", new ICrashReportDetail<String>() {
-			public String call() {
-
-				return OpenGlHelper.getLogText();
-			}
-		});
-		theCrash.getCategory().addDetail("Using VBOs", new ICrashReportDetail<String>() {
-			public String call() {
-
-				return gameSettings.useVbo ? "Yes" : "No";
-			}
-		});
-		theCrash.getCategory().addDetail("Is Modded", new ICrashReportDetail<String>() {
-			public String call() throws Exception {
-
-				String s = ClientBrandRetriever.getClientModName();
-
-				if (!"vanilla".equals(s)) {
-					return "Definitely; Client brand changed to '" + s + "'";
-				} else {
-					return Minecraft.class.getSigners() == null ? "Very likely; Jar signature invalidated" : "Probably not. Jar signature remains and client brand is untouched.";
-				}
-			}
-		});
-		theCrash.getCategory().addDetail("Type", new ICrashReportDetail<String>() {
-			public String call() throws Exception {
-
-				return "Client (map_client.txt)";
-			}
-		});
-		theCrash.getCategory().addDetail("Resource Packs", new ICrashReportDetail<String>() {
-			public String call() throws Exception {
-
-				StringBuilder stringbuilder = new StringBuilder();
-
-				for (String s : gameSettings.resourcePacks) {
-					if (stringbuilder.length() > 0) {
-						stringbuilder.append(", ");
-					}
-
-					stringbuilder.append(s);
-
-					if (gameSettings.incompatibleResourcePacks.contains(s)) {
-						stringbuilder.append(" (incompatible)");
-					}
+			for (String s : gameSettings.resourcePacks) {
+				if (!stringbuilder.isEmpty()) {
+					stringbuilder.append(", ");
 				}
 
-				return stringbuilder.toString();
-			}
-		});
-		theCrash.getCategory().addDetail("Current Language", new ICrashReportDetail<String>() {
-			public String call() throws Exception {
+				stringbuilder.append(s);
 
-				return mcLanguageManager.getCurrentLanguage().toString();
+				if (gameSettings.incompatibleResourcePacks.contains(s)) {
+					stringbuilder.append(" (incompatible)");
+				}
 			}
-		});
-		theCrash.getCategory().addDetail("Profiler Position", new ICrashReportDetail<String>() {
-			public String call() throws Exception {
 
-				return mcProfiler.profilingEnabled ? mcProfiler.getNameOfLastSection() : "N/A (disabled)";
-			}
+			return stringbuilder.toString();
 		});
-		theCrash.getCategory().addDetail("CPU", new ICrashReportDetail<String>() {
-			public String call() throws Exception {
-
-				return OpenGlHelper.getCpu();
-			}
-		});
+		theCrash.getCategory().addDetail("Current Language", () -> mcLanguageManager.getCurrentLanguage().toString());
+		theCrash.getCategory().addDetail("Profiler Position", () -> mcProfiler.profilingEnabled ? mcProfiler.getNameOfLastSection() : "N/A (disabled)");
+		theCrash.getCategory().addDetail("CPU", () -> OpenGlHelper.getCpu());
 
 		if (world != null) {
 			world.addWorldInfoToCrashReport(theCrash);
@@ -2567,28 +2490,23 @@ public class Minecraft implements IThreadListener, ISnooperInfo {
 
 	public ListenableFuture<Object> scheduleResourcesRefresh() {
 
-		return addScheduledTask(new Runnable() {
-			public void run() {
-
-				refreshResources();
-			}
-		});
+		return addScheduledTask(() -> refreshResources());
 	}
 
 	public void addServerStatsToSnooper(Snooper playerSnooper) {
 
-		playerSnooper.addClientStat("fps", Integer.valueOf(debugFPS));
-		playerSnooper.addClientStat("vsync_enabled", Boolean.valueOf(gameSettings.enableVsync));
-		playerSnooper.addClientStat("display_frequency", Integer.valueOf(Display.getDisplayMode().getFrequency()));
+		playerSnooper.addClientStat("fps", debugFPS);
+		playerSnooper.addClientStat("vsync_enabled", gameSettings.enableVsync);
+		playerSnooper.addClientStat("display_frequency", Display.getDisplayMode().getFrequency());
 		playerSnooper.addClientStat("display_type", fullscreen ? "fullscreen" : "windowed");
-		playerSnooper.addClientStat("run_time", Long.valueOf((MinecraftServer.getCurrentTimeMillis() - playerSnooper.getMinecraftStartTimeMillis()) / 60L * 1000L));
+		playerSnooper.addClientStat("run_time", (MinecraftServer.getCurrentTimeMillis() - playerSnooper.getMinecraftStartTimeMillis()) / 60L * 1000L);
 		playerSnooper.addClientStat("current_action", getCurrentAction());
 		playerSnooper.addClientStat("language", gameSettings.language == null ? "en_us" : gameSettings.language);
 		String s = ByteOrder.nativeOrder() == ByteOrder.LITTLE_ENDIAN ? "little" : "big";
 		playerSnooper.addClientStat("endianness", s);
-		playerSnooper.addClientStat("subtitles", Boolean.valueOf(gameSettings.showSubtitles));
+		playerSnooper.addClientStat("subtitles", gameSettings.showSubtitles);
 		playerSnooper.addClientStat("touch", gameSettings.touchscreen ? "touch" : "mouse");
-		playerSnooper.addClientStat("resource_packs", Integer.valueOf(mcResourcePackRepository.getRepositoryEntries().size()));
+		playerSnooper.addClientStat("resource_packs", mcResourcePackRepository.getRepositoryEntries().size());
 		int i = 0;
 
 		for (ResourcePackRepository.Entry resourcepackrepository$entry : mcResourcePackRepository.getRepositoryEntries()) {
@@ -2621,110 +2539,110 @@ public class Minecraft implements IThreadListener, ISnooperInfo {
 		playerSnooper.addStatToSnooper("client_brand", ClientBrandRetriever.getClientModName());
 		playerSnooper.addStatToSnooper("launched_version", launchedVersion);
 		ContextCapabilities contextcapabilities = GLContext.getCapabilities();
-		playerSnooper.addStatToSnooper("gl_caps[ARB_arrays_of_arrays]", Boolean.valueOf(contextcapabilities.GL_ARB_arrays_of_arrays));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_base_instance]", Boolean.valueOf(contextcapabilities.GL_ARB_base_instance));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_blend_func_extended]", Boolean.valueOf(contextcapabilities.GL_ARB_blend_func_extended));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_clear_buffer_object]", Boolean.valueOf(contextcapabilities.GL_ARB_clear_buffer_object));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_color_buffer_float]", Boolean.valueOf(contextcapabilities.GL_ARB_color_buffer_float));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_compatibility]", Boolean.valueOf(contextcapabilities.GL_ARB_compatibility));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_compressed_texture_pixel_storage]", Boolean.valueOf(contextcapabilities.GL_ARB_compressed_texture_pixel_storage));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_compute_shader]", Boolean.valueOf(contextcapabilities.GL_ARB_compute_shader));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_copy_buffer]", Boolean.valueOf(contextcapabilities.GL_ARB_copy_buffer));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_copy_image]", Boolean.valueOf(contextcapabilities.GL_ARB_copy_image));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_depth_buffer_float]", Boolean.valueOf(contextcapabilities.GL_ARB_depth_buffer_float));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_compute_shader]", Boolean.valueOf(contextcapabilities.GL_ARB_compute_shader));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_copy_buffer]", Boolean.valueOf(contextcapabilities.GL_ARB_copy_buffer));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_copy_image]", Boolean.valueOf(contextcapabilities.GL_ARB_copy_image));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_depth_buffer_float]", Boolean.valueOf(contextcapabilities.GL_ARB_depth_buffer_float));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_depth_clamp]", Boolean.valueOf(contextcapabilities.GL_ARB_depth_clamp));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_depth_texture]", Boolean.valueOf(contextcapabilities.GL_ARB_depth_texture));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_draw_buffers]", Boolean.valueOf(contextcapabilities.GL_ARB_draw_buffers));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_draw_buffers_blend]", Boolean.valueOf(contextcapabilities.GL_ARB_draw_buffers_blend));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_draw_elements_base_vertex]", Boolean.valueOf(contextcapabilities.GL_ARB_draw_elements_base_vertex));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_draw_indirect]", Boolean.valueOf(contextcapabilities.GL_ARB_draw_indirect));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_draw_instanced]", Boolean.valueOf(contextcapabilities.GL_ARB_draw_instanced));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_explicit_attrib_location]", Boolean.valueOf(contextcapabilities.GL_ARB_explicit_attrib_location));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_explicit_uniform_location]", Boolean.valueOf(contextcapabilities.GL_ARB_explicit_uniform_location));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_fragment_layer_viewport]", Boolean.valueOf(contextcapabilities.GL_ARB_fragment_layer_viewport));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_fragment_program]", Boolean.valueOf(contextcapabilities.GL_ARB_fragment_program));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_fragment_shader]", Boolean.valueOf(contextcapabilities.GL_ARB_fragment_shader));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_fragment_program_shadow]", Boolean.valueOf(contextcapabilities.GL_ARB_fragment_program_shadow));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_framebuffer_object]", Boolean.valueOf(contextcapabilities.GL_ARB_framebuffer_object));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_framebuffer_sRGB]", Boolean.valueOf(contextcapabilities.GL_ARB_framebuffer_sRGB));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_geometry_shader4]", Boolean.valueOf(contextcapabilities.GL_ARB_geometry_shader4));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_gpu_shader5]", Boolean.valueOf(contextcapabilities.GL_ARB_gpu_shader5));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_half_float_pixel]", Boolean.valueOf(contextcapabilities.GL_ARB_half_float_pixel));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_half_float_vertex]", Boolean.valueOf(contextcapabilities.GL_ARB_half_float_vertex));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_instanced_arrays]", Boolean.valueOf(contextcapabilities.GL_ARB_instanced_arrays));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_map_buffer_alignment]", Boolean.valueOf(contextcapabilities.GL_ARB_map_buffer_alignment));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_map_buffer_range]", Boolean.valueOf(contextcapabilities.GL_ARB_map_buffer_range));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_multisample]", Boolean.valueOf(contextcapabilities.GL_ARB_multisample));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_multitexture]", Boolean.valueOf(contextcapabilities.GL_ARB_multitexture));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_occlusion_query2]", Boolean.valueOf(contextcapabilities.GL_ARB_occlusion_query2));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_pixel_buffer_object]", Boolean.valueOf(contextcapabilities.GL_ARB_pixel_buffer_object));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_seamless_cube_map]", Boolean.valueOf(contextcapabilities.GL_ARB_seamless_cube_map));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_shader_objects]", Boolean.valueOf(contextcapabilities.GL_ARB_shader_objects));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_shader_stencil_export]", Boolean.valueOf(contextcapabilities.GL_ARB_shader_stencil_export));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_shader_texture_lod]", Boolean.valueOf(contextcapabilities.GL_ARB_shader_texture_lod));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_shadow]", Boolean.valueOf(contextcapabilities.GL_ARB_shadow));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_shadow_ambient]", Boolean.valueOf(contextcapabilities.GL_ARB_shadow_ambient));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_stencil_texturing]", Boolean.valueOf(contextcapabilities.GL_ARB_stencil_texturing));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_sync]", Boolean.valueOf(contextcapabilities.GL_ARB_sync));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_tessellation_shader]", Boolean.valueOf(contextcapabilities.GL_ARB_tessellation_shader));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_texture_border_clamp]", Boolean.valueOf(contextcapabilities.GL_ARB_texture_border_clamp));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_texture_buffer_object]", Boolean.valueOf(contextcapabilities.GL_ARB_texture_buffer_object));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_texture_cube_map]", Boolean.valueOf(contextcapabilities.GL_ARB_texture_cube_map));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_texture_cube_map_array]", Boolean.valueOf(contextcapabilities.GL_ARB_texture_cube_map_array));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_texture_non_power_of_two]", Boolean.valueOf(contextcapabilities.GL_ARB_texture_non_power_of_two));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_uniform_buffer_object]", Boolean.valueOf(contextcapabilities.GL_ARB_uniform_buffer_object));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_vertex_blend]", Boolean.valueOf(contextcapabilities.GL_ARB_vertex_blend));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_vertex_buffer_object]", Boolean.valueOf(contextcapabilities.GL_ARB_vertex_buffer_object));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_vertex_program]", Boolean.valueOf(contextcapabilities.GL_ARB_vertex_program));
-		playerSnooper.addStatToSnooper("gl_caps[ARB_vertex_shader]", Boolean.valueOf(contextcapabilities.GL_ARB_vertex_shader));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_bindable_uniform]", Boolean.valueOf(contextcapabilities.GL_EXT_bindable_uniform));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_blend_equation_separate]", Boolean.valueOf(contextcapabilities.GL_EXT_blend_equation_separate));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_blend_func_separate]", Boolean.valueOf(contextcapabilities.GL_EXT_blend_func_separate));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_blend_minmax]", Boolean.valueOf(contextcapabilities.GL_EXT_blend_minmax));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_blend_subtract]", Boolean.valueOf(contextcapabilities.GL_EXT_blend_subtract));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_draw_instanced]", Boolean.valueOf(contextcapabilities.GL_EXT_draw_instanced));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_framebuffer_multisample]", Boolean.valueOf(contextcapabilities.GL_EXT_framebuffer_multisample));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_framebuffer_object]", Boolean.valueOf(contextcapabilities.GL_EXT_framebuffer_object));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_framebuffer_sRGB]", Boolean.valueOf(contextcapabilities.GL_EXT_framebuffer_sRGB));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_geometry_shader4]", Boolean.valueOf(contextcapabilities.GL_EXT_geometry_shader4));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_gpu_program_parameters]", Boolean.valueOf(contextcapabilities.GL_EXT_gpu_program_parameters));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_gpu_shader4]", Boolean.valueOf(contextcapabilities.GL_EXT_gpu_shader4));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_multi_draw_arrays]", Boolean.valueOf(contextcapabilities.GL_EXT_multi_draw_arrays));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_packed_depth_stencil]", Boolean.valueOf(contextcapabilities.GL_EXT_packed_depth_stencil));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_paletted_texture]", Boolean.valueOf(contextcapabilities.GL_EXT_paletted_texture));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_rescale_normal]", Boolean.valueOf(contextcapabilities.GL_EXT_rescale_normal));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_separate_shader_objects]", Boolean.valueOf(contextcapabilities.GL_EXT_separate_shader_objects));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_shader_image_load_store]", Boolean.valueOf(contextcapabilities.GL_EXT_shader_image_load_store));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_shadow_funcs]", Boolean.valueOf(contextcapabilities.GL_EXT_shadow_funcs));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_shared_texture_palette]", Boolean.valueOf(contextcapabilities.GL_EXT_shared_texture_palette));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_stencil_clear_tag]", Boolean.valueOf(contextcapabilities.GL_EXT_stencil_clear_tag));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_stencil_two_side]", Boolean.valueOf(contextcapabilities.GL_EXT_stencil_two_side));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_stencil_wrap]", Boolean.valueOf(contextcapabilities.GL_EXT_stencil_wrap));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_texture_3d]", Boolean.valueOf(contextcapabilities.GL_EXT_texture_3d));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_texture_array]", Boolean.valueOf(contextcapabilities.GL_EXT_texture_array));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_texture_buffer_object]", Boolean.valueOf(contextcapabilities.GL_EXT_texture_buffer_object));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_texture_integer]", Boolean.valueOf(contextcapabilities.GL_EXT_texture_integer));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_texture_lod_bias]", Boolean.valueOf(contextcapabilities.GL_EXT_texture_lod_bias));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_texture_sRGB]", Boolean.valueOf(contextcapabilities.GL_EXT_texture_sRGB));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_vertex_shader]", Boolean.valueOf(contextcapabilities.GL_EXT_vertex_shader));
-		playerSnooper.addStatToSnooper("gl_caps[EXT_vertex_weighting]", Boolean.valueOf(contextcapabilities.GL_EXT_vertex_weighting));
-		playerSnooper.addStatToSnooper("gl_caps[gl_max_vertex_uniforms]", Integer.valueOf(GlStateManager.glGetInteger(35658)));
+		playerSnooper.addStatToSnooper("gl_caps[ARB_arrays_of_arrays]", contextcapabilities.GL_ARB_arrays_of_arrays);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_base_instance]", contextcapabilities.GL_ARB_base_instance);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_blend_func_extended]", contextcapabilities.GL_ARB_blend_func_extended);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_clear_buffer_object]", contextcapabilities.GL_ARB_clear_buffer_object);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_color_buffer_float]", contextcapabilities.GL_ARB_color_buffer_float);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_compatibility]", contextcapabilities.GL_ARB_compatibility);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_compressed_texture_pixel_storage]", contextcapabilities.GL_ARB_compressed_texture_pixel_storage);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_compute_shader]", contextcapabilities.GL_ARB_compute_shader);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_copy_buffer]", contextcapabilities.GL_ARB_copy_buffer);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_copy_image]", contextcapabilities.GL_ARB_copy_image);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_depth_buffer_float]", contextcapabilities.GL_ARB_depth_buffer_float);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_compute_shader]", contextcapabilities.GL_ARB_compute_shader);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_copy_buffer]", contextcapabilities.GL_ARB_copy_buffer);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_copy_image]", contextcapabilities.GL_ARB_copy_image);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_depth_buffer_float]", contextcapabilities.GL_ARB_depth_buffer_float);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_depth_clamp]", contextcapabilities.GL_ARB_depth_clamp);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_depth_texture]", contextcapabilities.GL_ARB_depth_texture);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_draw_buffers]", contextcapabilities.GL_ARB_draw_buffers);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_draw_buffers_blend]", contextcapabilities.GL_ARB_draw_buffers_blend);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_draw_elements_base_vertex]", contextcapabilities.GL_ARB_draw_elements_base_vertex);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_draw_indirect]", contextcapabilities.GL_ARB_draw_indirect);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_draw_instanced]", contextcapabilities.GL_ARB_draw_instanced);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_explicit_attrib_location]", contextcapabilities.GL_ARB_explicit_attrib_location);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_explicit_uniform_location]", contextcapabilities.GL_ARB_explicit_uniform_location);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_fragment_layer_viewport]", contextcapabilities.GL_ARB_fragment_layer_viewport);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_fragment_program]", contextcapabilities.GL_ARB_fragment_program);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_fragment_shader]", contextcapabilities.GL_ARB_fragment_shader);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_fragment_program_shadow]", contextcapabilities.GL_ARB_fragment_program_shadow);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_framebuffer_object]", contextcapabilities.GL_ARB_framebuffer_object);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_framebuffer_sRGB]", contextcapabilities.GL_ARB_framebuffer_sRGB);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_geometry_shader4]", contextcapabilities.GL_ARB_geometry_shader4);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_gpu_shader5]", contextcapabilities.GL_ARB_gpu_shader5);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_half_float_pixel]", contextcapabilities.GL_ARB_half_float_pixel);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_half_float_vertex]", contextcapabilities.GL_ARB_half_float_vertex);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_instanced_arrays]", contextcapabilities.GL_ARB_instanced_arrays);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_map_buffer_alignment]", contextcapabilities.GL_ARB_map_buffer_alignment);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_map_buffer_range]", contextcapabilities.GL_ARB_map_buffer_range);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_multisample]", contextcapabilities.GL_ARB_multisample);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_multitexture]", contextcapabilities.GL_ARB_multitexture);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_occlusion_query2]", contextcapabilities.GL_ARB_occlusion_query2);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_pixel_buffer_object]", contextcapabilities.GL_ARB_pixel_buffer_object);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_seamless_cube_map]", contextcapabilities.GL_ARB_seamless_cube_map);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_shader_objects]", contextcapabilities.GL_ARB_shader_objects);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_shader_stencil_export]", contextcapabilities.GL_ARB_shader_stencil_export);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_shader_texture_lod]", contextcapabilities.GL_ARB_shader_texture_lod);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_shadow]", contextcapabilities.GL_ARB_shadow);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_shadow_ambient]", contextcapabilities.GL_ARB_shadow_ambient);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_stencil_texturing]", contextcapabilities.GL_ARB_stencil_texturing);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_sync]", contextcapabilities.GL_ARB_sync);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_tessellation_shader]", contextcapabilities.GL_ARB_tessellation_shader);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_texture_border_clamp]", contextcapabilities.GL_ARB_texture_border_clamp);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_texture_buffer_object]", contextcapabilities.GL_ARB_texture_buffer_object);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_texture_cube_map]", contextcapabilities.GL_ARB_texture_cube_map);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_texture_cube_map_array]", contextcapabilities.GL_ARB_texture_cube_map_array);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_texture_non_power_of_two]", contextcapabilities.GL_ARB_texture_non_power_of_two);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_uniform_buffer_object]", contextcapabilities.GL_ARB_uniform_buffer_object);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_vertex_blend]", contextcapabilities.GL_ARB_vertex_blend);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_vertex_buffer_object]", contextcapabilities.GL_ARB_vertex_buffer_object);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_vertex_program]", contextcapabilities.GL_ARB_vertex_program);
+		playerSnooper.addStatToSnooper("gl_caps[ARB_vertex_shader]", contextcapabilities.GL_ARB_vertex_shader);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_bindable_uniform]", contextcapabilities.GL_EXT_bindable_uniform);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_blend_equation_separate]", contextcapabilities.GL_EXT_blend_equation_separate);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_blend_func_separate]", contextcapabilities.GL_EXT_blend_func_separate);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_blend_minmax]", contextcapabilities.GL_EXT_blend_minmax);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_blend_subtract]", contextcapabilities.GL_EXT_blend_subtract);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_draw_instanced]", contextcapabilities.GL_EXT_draw_instanced);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_framebuffer_multisample]", contextcapabilities.GL_EXT_framebuffer_multisample);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_framebuffer_object]", contextcapabilities.GL_EXT_framebuffer_object);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_framebuffer_sRGB]", contextcapabilities.GL_EXT_framebuffer_sRGB);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_geometry_shader4]", contextcapabilities.GL_EXT_geometry_shader4);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_gpu_program_parameters]", contextcapabilities.GL_EXT_gpu_program_parameters);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_gpu_shader4]", contextcapabilities.GL_EXT_gpu_shader4);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_multi_draw_arrays]", contextcapabilities.GL_EXT_multi_draw_arrays);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_packed_depth_stencil]", contextcapabilities.GL_EXT_packed_depth_stencil);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_paletted_texture]", contextcapabilities.GL_EXT_paletted_texture);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_rescale_normal]", contextcapabilities.GL_EXT_rescale_normal);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_separate_shader_objects]", contextcapabilities.GL_EXT_separate_shader_objects);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_shader_image_load_store]", contextcapabilities.GL_EXT_shader_image_load_store);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_shadow_funcs]", contextcapabilities.GL_EXT_shadow_funcs);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_shared_texture_palette]", contextcapabilities.GL_EXT_shared_texture_palette);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_stencil_clear_tag]", contextcapabilities.GL_EXT_stencil_clear_tag);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_stencil_two_side]", contextcapabilities.GL_EXT_stencil_two_side);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_stencil_wrap]", contextcapabilities.GL_EXT_stencil_wrap);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_texture_3d]", contextcapabilities.GL_EXT_texture_3d);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_texture_array]", contextcapabilities.GL_EXT_texture_array);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_texture_buffer_object]", contextcapabilities.GL_EXT_texture_buffer_object);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_texture_integer]", contextcapabilities.GL_EXT_texture_integer);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_texture_lod_bias]", contextcapabilities.GL_EXT_texture_lod_bias);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_texture_sRGB]", contextcapabilities.GL_EXT_texture_sRGB);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_vertex_shader]", contextcapabilities.GL_EXT_vertex_shader);
+		playerSnooper.addStatToSnooper("gl_caps[EXT_vertex_weighting]", contextcapabilities.GL_EXT_vertex_weighting);
+		playerSnooper.addStatToSnooper("gl_caps[gl_max_vertex_uniforms]", GlStateManager.glGetInteger(35658));
 		GlStateManager.glGetError();
-		playerSnooper.addStatToSnooper("gl_caps[gl_max_fragment_uniforms]", Integer.valueOf(GlStateManager.glGetInteger(35657)));
+		playerSnooper.addStatToSnooper("gl_caps[gl_max_fragment_uniforms]", GlStateManager.glGetInteger(35657));
 		GlStateManager.glGetError();
-		playerSnooper.addStatToSnooper("gl_caps[gl_max_vertex_attribs]", Integer.valueOf(GlStateManager.glGetInteger(34921)));
+		playerSnooper.addStatToSnooper("gl_caps[gl_max_vertex_attribs]", GlStateManager.glGetInteger(34921));
 		GlStateManager.glGetError();
-		playerSnooper.addStatToSnooper("gl_caps[gl_max_vertex_texture_image_units]", Integer.valueOf(GlStateManager.glGetInteger(35660)));
+		playerSnooper.addStatToSnooper("gl_caps[gl_max_vertex_texture_image_units]", GlStateManager.glGetInteger(35660));
 		GlStateManager.glGetError();
-		playerSnooper.addStatToSnooper("gl_caps[gl_max_texture_image_units]", Integer.valueOf(GlStateManager.glGetInteger(34930)));
+		playerSnooper.addStatToSnooper("gl_caps[gl_max_texture_image_units]", GlStateManager.glGetInteger(34930));
 		GlStateManager.glGetError();
-		playerSnooper.addStatToSnooper("gl_caps[gl_max_array_texture_layers]", Integer.valueOf(GlStateManager.glGetInteger(35071)));
+		playerSnooper.addStatToSnooper("gl_caps[gl_max_array_texture_layers]", GlStateManager.glGetInteger(35071));
 		GlStateManager.glGetError();
-		playerSnooper.addStatToSnooper("gl_max_texture_size", Integer.valueOf(getGLMaximumTextureSize()));
+		playerSnooper.addStatToSnooper("gl_max_texture_size", getGLMaximumTextureSize());
 		GameProfile gameprofile = session.getProfile();
 
 		if (gameprofile != null && gameprofile.getId() != null) {
