@@ -22,24 +22,24 @@ public class GuiIngameMenu extends GuiScreen {
 		buttonList.clear();
 		int i = -16;
 		int j = 98;
-		buttonList.add(new GuiButton(1, width / 2 - 100, height / 4 + 120 + -16, I18n.format("menu.returnToMenu")));
+		buttonList.add(new GuiButton(1, width / 2 - 100, height / 4 + 120 - 16, I18n.format("menu.returnToMenu")));
 
 		if (!mc.isIntegratedServerRunning()) {
-			(buttonList.get(0)).displayString = I18n.format("menu.disconnect");
+			(buttonList.getFirst()).displayString = I18n.format("menu.disconnect");
 		}
 
-		buttonList.add(new GuiButton(4, width / 2 - 100, height / 4 + 24 + -16, I18n.format("menu.returnToGame")));
-		buttonList.add(new GuiButton(0, width / 2 - 100, height / 4 + 96 + -16, 98, 20, I18n.format("menu.options")));
-		GuiButton guibutton = addButton(new GuiButton(7, width / 2 + 2, height / 4 + 96 + -16, 98, 20, I18n.format("menu.shareToLan")));
+		buttonList.add(new GuiButton(4, width / 2 - 100, height / 4 + 24 - 16, I18n.format("menu.returnToGame")));
+		buttonList.add(new GuiButton(0, width / 2 - 100, height / 4 + 96 - 16, 98, 20, I18n.format("menu.options")));
+		GuiButton guibutton = addButton(new GuiButton(7, width / 2 + 2, height / 4 + 96 - 16, 98, 20, I18n.format("menu.shareToLan")));
 		guibutton.enabled = mc.isSingleplayer() && !mc.getIntegratedServer().getPublic();
-		buttonList.add(new GuiButton(5, width / 2 - 100, height / 4 + 48 + -16, 98, 20, I18n.format("gui.advancements")));
-		buttonList.add(new GuiButton(6, width / 2 + 2, height / 4 + 48 + -16, 98, 20, I18n.format("gui.stats")));
+		buttonList.add(new GuiButton(5, width / 2 - 100, height / 4 + 48 - 16, 98, 20, I18n.format("gui.advancements")));
+		buttonList.add(new GuiButton(6, width / 2 + 2, height / 4 + 48 - 16, 98, 20, I18n.format("gui.stats")));
 	}
 
 	/**
 	 * Called by the controls from the buttonList when activated. (Mouse pressed for buttons)
 	 */
-	protected void actionPerformed(GuiButton button) throws IOException {
+	protected void actionPerformed(GuiButton button) {
 
 		switch (button.id) {
 			case 0:
