@@ -83,7 +83,7 @@ public class TileEntitySignRenderer extends TileEntitySpecialRenderer<TileEntity
 				if (te.signText[j] != null) {
 					ITextComponent itextcomponent = te.signText[j];
 					List<ITextComponent> list = GuiUtilRenderComponents.splitText(itextcomponent, 90, fontrenderer, false, true);
-					String s = list != null && !list.isEmpty() ? list.get(0).getFormattedText() : "";
+					String s = list != null && !list.isEmpty() ? list.getFirst().getFormattedText() : "";
 
 					if (j == te.lineBeingEdited) {
 						s = "> " + s + " <";
